--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
 *.log
 vtkFreeWrapper/vtkFreeWrapper/down_sampling/down_sampling/x64/Release/vc140.pdb
 *.pdb
+*.bak
+vtkFreeWrapper/vtkFreeWrapper/down_sampling/down_sampling/x64/Release/main.obj
