--- a/vtkFreeWrapper/vtkFreeWrapper/vtkWrapperLib/vtkWrapperLib.vcxproj
+++ b/vtkFreeWrapper/vtkFreeWrapper/vtkWrapperLib/vtkWrapperLib.vcxproj
@@ -151,6 +151,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Lib>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
