--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ vtkFreeWrapper/vtkFreeWrapper/down_sampling/down_sampling/x64/Release/main.obj
 vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
 *.bak
 *.obj
+vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
+*.bak
