Correction corresponding to VTK 8.1.1 was done

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
 *.obj
 vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
 *.bak
+*.bak
