Fix incorrect build settings

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
 vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
 *.bak
 *.bak
+*.bak
+vtkFreeWrapper/vtkFreeWrapper/DICOMview/MRI_view__.cpp.bak
