--- a/vtkFreeWrapper/vtkFreeWrapper/DICOMview/DICOM2bmp/DICOM2bmp.vcxproj
+++ b/vtkFreeWrapper/vtkFreeWrapper/DICOMview/DICOM2bmp/DICOM2bmp.vcxproj
@@ -144,7 +144,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>../../../../VTK\64bit/Release\include\vtk-8.1.1;..\..\..\util\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../../VTK\64bit/Release\include\vtk-x;..\..\..\util\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
