--- a/vtkFreeWrapper/vtkFreeWrapper/STLViewer/STLViewer.vcxproj
+++ b/vtkFreeWrapper/vtkFreeWrapper/STLViewer/STLViewer.vcxproj
@@ -142,7 +142,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>../util/include;../../VTK/64bit/Release\include\vtk-8.1.1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../util/include;../../VTK/64bit/Release\include\vtk-x;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader>
@@ -152,7 +152,7 @@
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)STLViewer.exe</OutputFile>
-      <AdditionalLibraryDirectories>../../VTK\64bit/Release\lib\vtk-8.1.1;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../VTK\64bit/Release\lib\vtk-x;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
