--- a/vtkFreeWrapper/vtkFreeWrapper/test/test.vcxproj
+++ b/vtkFreeWrapper/vtkFreeWrapper/test/test.vcxproj
@@ -144,7 +144,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>../../VTK\64bit/Release\include\vtk-8.1.1;..\util\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../VTK\64bit/Release\include\vtk-x;..\util\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader>
@@ -154,7 +154,7 @@
     </ClCompile>
     <Link>
       <OutputFile>$(OutDir)test.exe</OutputFile>
-      <AdditionalLibraryDirectories>../../VTK\64bit/Release\lib\vtk-8.1.1;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../VTK\64bit/Release\lib\vtk-x;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
