--- a/vtkFreeWrapper/vtkFreeWrapper/obj_to_ply/obj_to_ply/obj_to_ply.vcxproj
+++ b/vtkFreeWrapper/vtkFreeWrapper/obj_to_ply/obj_to_ply/obj_to_ply.vcxproj
@@ -133,7 +133,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../../VTK\64bit/Release\include\vtk-8.1.1;..\..\util\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../VTK\64bit/Release\include\vtk-x;..\..\util\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
